# pypi-publish-with-cicd

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yaml
.github/workflows/: ci.yaml
docs-validate/: docker-compose.yaml
lint/: Dockerfile  docker-compose.yaml  lint.sh
reformat/: reformat.sh
tests/: docker-compose.yaml
